fixing dnd z-index issue

--- a/src/components/List/list.css
+++ b/src/components/List/list.css
@@ -25,42 +25,44 @@
 
 .list {
   background: #101204;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      border-radius: 12px;
-      padding: 8px 10px;
-      width: 272px;
-      min-width: 250px;
-      margin-bottom: 45px;
-      box-shadow: var(--ds-shadow-raised, 0px 1px 1px #091e4240, 0px 0px 1px #091e424f);
-      max-height:calc(100vh - 190px);
-      overflow-y: scroll;
-    }
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 12px;
+  padding: 8px 10px;
+  width: 272px;
+  min-width: 250px;
+  margin-bottom: 45px;
+  box-shadow: var(
+    --ds-shadow-raised,
+    0px 1px 1px #091e4240,
+    0px 0px 1px #091e424f
+  );
+  /* max-height: calc(100vh - 190px); */
+  /* overflow-y: scroll; */
+}
 
-     .list .list-header {
-       padding: 8px 12px 0;
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-        gap: 30px;
-      }
-  
-     .boards .list h3 {
-       font-size: 14px;
-       margin-left: 8px;
-       font-weight: 600;
-       line-height: 20px;
-       color: #b6c2cf;
-       text-transform: capitalize;
-       min-height: 20px;
+.list .list-header {
+  padding: 8px 12px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+}
 
-     }
+.boards .list h3 {
+  font-size: 14px;
+  margin-left: 8px;
+  font-weight: 600;
+  line-height: 20px;
+  color: #b6c2cf;
+  text-transform: capitalize;
+  min-height: 20px;
+}
 
-
-.draggable{
+.draggable {
   position: relative !important;
-    top: auto !important;
-    left: auto !important;
-    /* transform: none !important; */
+  top: auto !important;
+  left: auto !important;
+  /* transform: none !important; */
 }
