--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.list .wrapper .draggable {
+  /* z-index: 100 !important; */
+}
